[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/SuperScenes/EffectField.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="EffectArea" type="Area2D" parent="." groups=["Field"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]

[node name="LifeTime" type="Timer" parent="."]

[node name="DamageFrequency" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Polygon2D" type="Polygon2D" parent="." groups=["Field"]]

[connection signal="body_entered" from="EffectArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="EffectArea" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="timeout" from="DamageFrequency" to="." method="_on_DamageFrequency_timeout"]
